﻿Baseline

|     Method |    Mean |    Error |   StdDev |        Gen0 |        Gen1 |      Gen2 | Allocated |
|----------- |--------:|---------:|---------:|------------:|------------:|----------:|----------:|
|   Compress | 2.868 s | 0.1651 s | 0.0090 s | 156000.0000 | 150000.0000 | 4000.0000 |   2.38 GB |
| Uncompress | 2.753 s | 0.4412 s | 0.0242 s | 148000.0000 |  43000.0000 | 4000.0000 |   2.26 GB |

Буфферы/Циклы вместо Linq
|     Method |     Mean |    Error |   StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
|----------- |---------:|---------:|---------:|----------:|----------:|----------:|----------:|
|   Compress | 937.3 ms | 250.5 ms | 13.73 ms | 9000.0000 | 8000.0000 | 3000.0000 | 117.51 MB |
| Uncompress | 921.9 ms | 134.7 ms |  7.39 ms | 9000.0000 | 8000.0000 | 3000.0000 |  113.8 MB |