@@ -1,15 +1,33 @@
 ﻿using System;
-using JPEG.Utilities;
+using System.Runtime.CompilerServices;
 
 namespace JPEG;
 
-public class DCT
+public static class Dct
 {
+	private static readonly double[] Alpha = new double[8];
+	private static readonly double[,] Cosine = new double[8,8];
+	
+	static Dct()
+	{
+		for(var i = 0; i < 8; i++)
+		{
+			Alpha[i] = i == 0 ? 1 / Math.Sqrt(2) : 1;
+		}
+		
+		for(var x = 0; x < 8; x++)
+		for(var u = 0; u < 8; u++)
+		{
+			Cosine[x,u] = Math.Cos(((2d * x + 1d) * u * Math.PI) / (2 * 8));
+		}
+	}
+	
 	public static void DCT2D(double[,] input, double[,] output)
 	{
 		var height = input.GetLength(0);
 		var width = input.GetLength(1);
-
+		var beta = Beta(height, width);
+		
 		for (var u = 0; u < width; u++)
 		for (var v = 0; v < height; v++)
 		{
@@ -17,18 +35,18 @@ public class DCT
 			for (var x = 0; x < width; x++)
 			for (var y = 0; y < height; y++)
 			{
-				sum += BasisFunction(input[x, y], u, v, x, y, height, width);
+				sum += BasisFunction(input[x, y], u, v, x, y);
 			}
 			
-			output[u, v] = sum * Beta(height, width) * Alpha(u) * Alpha(v);
+			output[u, v] = sum * beta * Alpha[u] * Alpha[v];
 		}
 	}
 
 	public static void IDCT2D(double[,] coeffs, double[,] output)
 	{
-		
 		var height = coeffs.GetLength(0);
 		var width = coeffs.GetLength(1);
+		var beta = Beta(height, width);
 		
 		for (var x = 0; x < width; x++)
 		for (var y = 0; y < height; y++)
@@ -38,27 +56,15 @@ public class DCT
 			for (var u = 0; u < width; u++)
 			for (var v = 0; v < height; v++)
 			{
-				sum += BasisFunction(coeffs[u, v], u, v, x, y, height, width) * Alpha(u) * Alpha(v);
+				sum += BasisFunction(coeffs[u, v], u, v, x, y) * Alpha[u] * Alpha[v];
 			}
 			
-			output[x, y] = sum * Beta(height, width);
+			output[x, y] = sum * beta;
 		}
 	}
 
-	public static double BasisFunction(double a, double u, double v, double x, double y, int height, int width)
-	{
-		var b = Math.Cos(((2d * x + 1d) * u * Math.PI) / (2 * width));
-		var c = Math.Cos(((2d * y + 1d) * v * Math.PI) / (2 * height));
-
-		return a * b * c;
-	}
-
-	private static double Alpha(int u)
-	{
-		if (u == 0)
-			return 1 / Math.Sqrt(2);
-		return 1;
-	}
+	[MethodImpl(MethodImplOptions.AggressiveInlining)]
+	private static double BasisFunction(double a, int u, int v, int x, int y) => Cosine[x,u] * Cosine[y,v] * a;
 
 	private static double Beta(int height, int width)
 	{
