@@ -3,27 +3,27 @@ using System.Linq;
 
 namespace JPEG.Images;
 
-public class Pixel
+public record struct Pixel
 {
 	private readonly PixelFormat format;
 
 	public Pixel(double firstComponent, double secondComponent, double thirdComponent, PixelFormat pixelFormat)
 	{
-		if (!new[] { PixelFormat.Rgb, PixelFormat.YCbCr }.Contains(pixelFormat))
-			throw new FormatException("Unknown pixel format: " + pixelFormat);
 		format = pixelFormat;
-		if (pixelFormat == PixelFormat.Rgb)
+		switch (pixelFormat)
 		{
-			r = firstComponent;
-			g = secondComponent;
-			b = thirdComponent;
-		}
-
-		if (pixelFormat == PixelFormat.YCbCr)
-		{
-			y = firstComponent;
-			cb = secondComponent;
-			cr = thirdComponent;
+			case PixelFormat.Rgb:
+				r = firstComponent;
+				g = secondComponent;
+				b = thirdComponent;
+				break;
+			case PixelFormat.YCbCr:
+				y = firstComponent;
+				cb = secondComponent;
+				cr = thirdComponent;
+				break;
+			default:
+				throw new FormatException("Unknown pixel format: " + pixelFormat);
 		}
 	}
 
