@@ -10,3 +10,9 @@
 |----------- |---------:|---------:|---------:|----------:|----------:|----------:|----------:|
 |   Compress | 937.3 ms | 250.5 ms | 13.73 ms | 9000.0000 | 8000.0000 | 3000.0000 | 117.51 MB |
 | Uncompress | 921.9 ms | 134.7 ms |  7.39 ms | 9000.0000 | 8000.0000 | 3000.0000 |  113.8 MB |
+
+struct Pixel, Заранее подсчитать Alpha, Beta, Cosine
+|     Method |     Mean |     Error |   StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
+|----------- |---------:|----------:|---------:|----------:|----------:|----------:|----------:|
+|   Compress | 363.8 ms | 195.79 ms | 10.73 ms | 1000.0000 | 1000.0000 | 1000.0000 |  37.51 MB |
+| Uncompress | 316.2 ms |  17.82 ms |  0.98 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |
